force-app/main/default/objects/Bulk_Upload__c/Bulk_Upload__c.object-meta.xml
<CustomObject>
    <label>Bulk Upload Utility</label>
    <nameField>
        <displayFormat>BUU-{000000}</displayFormat>
        <label>Bulk Upload Utility Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bulk Upload Utility</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>