force-app/main/default/objects/Bulk_Upload__c/fields/File_Status__c.field-meta.xml
<CustomField>
    <fullName>File_Status__c</fullName>
    <label>File Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Uploaded</fullName>
            </value>
            <value>
                <fullName>Staging</fullName>
            </value>
            <value>
                <fullName>Staging Completed</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Processed Successfully</fullName>
            </value>
            <value>
                <fullName>Processed With Errors</fullName>
            </value>
            <value>
                <fullName>Processed With Staging Errors</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>