force-app/main/default/objects/Bulk_Upload__c/fields/Processing_Error_Count__c.field-meta.xml
<CustomField>
    <fullName>Processing_Error_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Processing Error Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>