force-app/main/default/objects/Bulk_Upload__c/fields/Staging_Error_Count__c.field-meta.xml
<CustomField>
    <fullName>Staging_Error_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Staging Error Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>