force-app/main/default/objects/Bulk_Upload__c/fields/Total_Rows__c.field-meta.xml
<CustomField>
    <fullName>Total_Rows__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Rows</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>