force-app/main/default/objects/Bulk_Upload__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>File_Status__c</columns>
    <columns>Total_Rows__c</columns>
    <columns>Staging_Error_Count__c</columns>
    <columns>Processing_Error_Count__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>